add_subdirectory(AudioCommon)
add_subdirectory(Common)
add_subdirectory(Core)
add_subdirectory(DiscIO)
if(LIBRETRO)
  add_subdirectory(DolphinLibretro)
else()
  add_subdirectory(DolphinWX)
  add_subdirectory(DolphinNoGUI)
endif()
add_subdirectory(InputCommon)
add_subdirectory(UICommon)
add_subdirectory(VideoCommon)
add_subdirectory(VideoBackends)

if(ENABLE_QT2)
  add_subdirectory(DolphinQt2)
endif()
